<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ServiceBox</string>
    <string name="registrar_usuario">Registrar Usuário</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="confirma">Confirma</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="load_directions">Carregar</string>
    <string name="action_config">Carregar</string>
    <string name="hint_login">Entre com seu email</string>
    <string name="hint_nome">Entre com seu nome</string>
    <string name="hint_sobrenome">Entre com seu sobre nome</string>
    <string name="hint_sexo">Selecione seu sexo</string>
    <string name="hint_telefone">Entre com seu telefone</string>
    <string name="hint_senha">Entre com sua senha</string>
    <string name="hint_confirma">Repita sua senha</string>
    <string name="bt_registra">Registrar</string>
    <string name="item_menu_outro">Outros</string>
    <string name="escolha_foto_primeiro">Por favor, escolha uma foto em primeiro lugar</string>
    <string name="upload_opcao_camera">Camera</string>
    <string name="upload_opcao_galeria">Galeria</string>
    <string name="titulo_dialog">Obter imagem de:</string>
    <string name="aguarde_por_favor">"Aguarde por favor"</string>
    <string name="processando">"Processando..."</string>
    <string name="sincronizando_seu_dado">"Sincronizando seus dados..."</string>
    <string name="acessa_via_facebook">"Acessar usando Facebook"</string>

    <!-- Generico -->
    <string name="item_menu_prestar">Prestar Serviço</string>
    <string name="dados_planejamento">Dados do planejamento</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_informacao_extra">Informações extras</string>
    <string name="label_dom">DOM</string>
    <string name="label_seg">SEG</string>
    <string name="label_ter">TER</string>
    <string name="label_qua">QUA</string>
    <string name="label_qui">QUI</string>
    <string name="label_sex">SEX</string>
    <string name="label_sab">SAB</string>
    <string name="label_horario">Horário</string>
    <string name="lebel_icone_notificacao">Notificação</string>
    <string name="serviceBox_notificacao">ServiceBox Notificação</string>
    <string name="solicitar_carona">Solicitar Carona</string>
    <string name="visualizar_itinerario">Visualizar</string>
    <string name="enviar_mensagem">Enviar mensagem</string>
    <string name="icone_notificacao">Notificações</string>
    <string name="label_sim">Sim</string>
    <string name="label_nao">Não</string>
    <string name="label_aceito">Aceito!</string>
    <string name="label_negado">Negou!</string>

    <!-- activity info -->
    <string name="bt_visualizar_mapa">Visualizar Rota</string>
    <string name="bt_solicitar_carona">Solicitar carona</string>
    <string name="bt_solicitar_reboque">Solicitar Reboque</string>
    <string name="lbl_solicitar">Solicitar</string>
    <string name="lbl_recomendar">Recomendar</string>
    <!-- fim activity info -->


    <!-- carona -->
    <string name="item_menu_pegar_carona">Pegar Carona.</string>
    <string name="item_menu_oferecr_carona">Oferecer Carona.</string>
    <string name="item_menu_motorista_rodada_carona">Motorista da Rodada</string>
    <string name="item_dialog_amigo">Amigos</string>
    <string name="item_dialog_regiao">Por região</string>
    <string name="item_dialog_rota">Por rota</string>
    <string name="menu_selecione_carona">Selecione tipo de Carona</string>
    <string name="item_menu_listar_carona">Listar minhas caronas</string>

    <!-- Prestar servco -->
    <string name="prestar_servico_confirmar">Confirmar</string>
    <string name="prestar_servico_simNao">Prestar Serviço</string>

    <!-- Activity Itinerario -->
    <string name="itinerario_partida">Partida</string>
    <string name="itinerario_destino">Destino</string>
    <string name="itinerario_confirmar">Confirmar</string>
    <string name="prestar_servico_so_amigo">só Amigos</string>
    <string name="prestar_servico_so_amigos_do_amigos">só Amigos dos Amigos</string>
    <string name="prestar_servico_todos">Todos</string>
    <string name="label_buscar_para">Buscar itinerário de:</string>
    <string name="label_exibir_para">Exibir meu itinerário para:</string>
    <string name="buscar_a">Buscar à </string>
    <string name="metro_ponto_partida">metros do meu ponto de partida</string>
    <string name="km_ponto_partida">kilômetros do meu ponto de partida</string>
    <string name="msg_distancia_default">Buscar à distâmcia de:</string>

    <!-- Activity Planejamento -->
    <string name="domingo">Domingo</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sábado</string>
    <string name="horario">Horário da partida</string>
    <string name="hora_fixa">Hora fixa</string>
    <string name="faixa_de_horario">Faixa de horário</string>
    <string name="zero_hora">00:00</string>
    <string name="entre_faixa">entre</string>
    <string name="e_faixa">e</string>
    <string name="planejamento_confirmar">Confirmar</string>

    <!-- errors -->
    <string name="errorUploadPicassaNaoSuportado">Imagens do Picasa ainda não são suportados. Por favor seleccione imagem local.</string>
    <string name="errorCanNotFindExternalStorageForTakingPicture">Não é possível encontrar de armazenamento externo para tirar uma foto</string>
    <string name="erroNaoConhecido">Não foi possivél identificar o erro ocorrido</string>
    <string name="errorCouldNotLogin">Could not login</string>
    <!-- Fim erros -->
    
    <!--  activity recomendacao -->
    <string name="lbl_recomendar_sim_nao">Recomendar</string>
    <string name="lbl_deixe_comentario">Deixe um comentário</string>   
    
    
    <string name="title_activity_activity_acesso">ActivityAcesso</string>
    <string name="account_google_login_button"><![CDATA[Connect using <b>Google</b> login]]></string>
    <string name="instant_sign_in_instructions"><![CDATA[<b>Sign up</b> or <b>sign in</b> with a single tap]]></string>
    <string name="conta_login_button">Acessar minha conta.</string>
    <string name="conta_cadastro_button">Cadastra-se agora!</string>
    <string name="title_activity_login">Login</string>
    <string name="sign_in_instructions"><![CDATA[<b>Entre</b> com seu email, password e aperte <b>Login</b>]]></string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_username">Nome usuário</string>
    <string name="account_forgot_password_button">Esqueceu seu password?</string>
    <string name="password_recovery_instructions">Digite seu e-mail para recuperar sua senha</string>
    <string name="account_own_server_button">Using your own domain?</string>
    <string name="logging_in_message">Por favor, aguarde. A iniciar sessão ...</string>
    <string name="campo_email">email</string>
    <string name="campo_password">password</string>
    <string name="campo_username">username</string>
    <string name="title_activity_prestar_servico">Prestar Serviço</string>
    <string name="title_activity_itinerario">Itinerário</string>
    <string name="title_activity_planejamento">Planejamento</string>

    <!-- Configurações -->
    <string name="ip_servidor_servicebox">http://192.168.0.5</string>
    <string name="title_activity_lista_servico">Serviços</string>
    <string name="title_activity_info">Informações</string>
    <string name="title_activity_listar_prestacao_servico">Ações</string>
    <string name="title_activity_lista_notificacoes">Notificações</string>
    <string name="title_activity_visualizar_map">Visualização</string>
    <string name="title_activity_recomendacao">Recomendações</string>
    
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    
     <string name="vazio">Nada foi emcontrado!</string>

</resources>
