<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_notificacao"
        android:actionLayout="@layout/action_bar_icone_notificacao"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_email"
        android:title="@string/lebel_icone_notificacao" />
    
    
    <item
        android:id="@+id/menu_selecione_carona"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark"
        android:menuCategory="container"
        android:orderInCategory="15"
        android:showAsAction="always"
        android:title="@string/menu_selecione_carona">
       <menu> 
        
		        <item android:id="@+id/item_menu_pegar_carona"		        
		        android:title="@string/item_menu_pegar_carona"/>	
		        
				<item android:id="@+id/item_menu_oferecr_carona"		        
		        android:title="@string/item_menu_oferecr_carona"/>	
		        
				<item android:id="@+id/item_menu_motorista_rodada_carona"		        
		        android:title="@string/item_menu_motorista_rodada_carona"/>	
		        
				<item android:id="@+id/item_menu_prestar_carona"		        
		        android:title="@string/item_menu_prestar"/>
				
				<item android:id="@+id/item_menu_listar_carona"		        
		        android:title="@string/item_menu_listar_carona"/>
       	
		</menu>
				
    </item>
</menu>
