<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.mobilenow.PlanejamentoActivity" >

    <org.holoeverywhere.widget.Switch
        android:id="@+id/domingo_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:checked="true"
        android:text="@string/domingo"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/segunda_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/domingo_switch"
        android:layout_alignTop="@+id/domingo_switch"
        android:layout_marginTop="31dp"
        android:checked="true"
        android:text="@string/segunda"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/terca_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/segunda_switch"
        android:layout_alignRight="@+id/segunda_switch"
        android:layout_below="@+id/domingo_switch"
        android:checked="true"
        android:text="@string/terca"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/quarta_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/terca_switch"
        android:layout_alignRight="@+id/terca_switch"
        android:layout_below="@+id/terca_switch"
        android:checked="true"
        android:text="@string/quarta"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/sexta_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quarta_switch"
        android:layout_alignRight="@+id/quarta_switch"
        android:layout_below="@+id/quinta_switch"
        android:checked="true"
        android:text="@string/sexta"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/sabado_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sexta_switch"
        android:layout_alignRight="@+id/domingo_switch"
        android:layout_below="@+id/sexta_switch"
        android:checked="true"
        android:text="@string/sabado"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/quinta_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sexta_switch"
        android:layout_alignRight="@+id/segunda_switch"
        android:layout_below="@+id/quarta_switch"
        android:checked="true"
        android:text="@string/quinta"
        android:visibility="visible" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/segunda_switch"
        android:layout_below="@+id/sabado_switch"
        android:layout_marginTop="14dp"
        android:background="@drawable/line_separator" />

    <TextView
        android:id="@+id/tv_faixaHorarioEntre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_entre"
        android:layout_alignBottom="@+id/label_entre"
        android:layout_alignRight="@+id/sabado_switch"  
        android:clickable="true" 
        android:enabled="true"     
        android:text="@string/zero_hora" />

    <TextView
        android:id="@+id/labelE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_faixaHorarioEntre"
        android:layout_alignBottom="@+id/tv_faixaHorarioEntre"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/tv_faixaHorarioEntre"        
        android:text="@string/e_faixa" />

    <TextView
        android:id="@+id/tv_horaFixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rb_horaFixa"
        android:layout_toRightOf="@+id/rb_horaFixa"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/zero_hora" />
    
    <Button
        android:id="@+id/confirmar_planejamento"
        style="@style/ServiceBox.YellowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/planejamento_confirmar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/segunda_switch"
        android:layout_centerVertical="true"
        android:text="@string/horario" />

    <RadioButton
        android:id="@+id/rb_horaFixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/segunda_switch"
        android:layout_below="@+id/textView1"
        android:checked="true"
        android:text="@string/hora_fixa" />

    <RadioButton
        android:id="@+id/rb_faixaHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/segunda_switch"
        android:layout_below="@+id/tv_horaFixa"
        android:layout_marginTop="14dp"
        android:text="@string/faixa_de_horario" />

    <TextView
        android:id="@+id/label_entre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/rb_faixaHorario"        
        android:text="@string/entre_faixa" />

    <TextView
        android:id="@+id/tvFaixaHoraE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/labelE"
        android:layout_alignBottom="@+id/labelE"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/labelE"
        android:clickable="true"
        android:enabled="true"        
        android:text="@string/zero_hora" />

</RelativeLayout>