<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/servicebox_site_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp" >

                    <!-- Thumbnail Image -->
				    <com.android.volley.toolbox.NetworkImageView
				        android:id="@+id/imagem_perfil"
				        android:layout_width="80dp"
				        android:layout_height="80dp"
				        android:layout_alignParentLeft="true"
				        android:scaleType="centerCrop"
				        android:layout_marginRight="8dp" />                     
                    
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearDados"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >
                                        
                    <TextView
                        android:id="@+id/nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"/>
                    
                    <TextView
				        android:id="@+id/descricao"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"		        
				        android:hint="descricao"				        
				        />
                </LinearLayout>
                
            </LinearLayout> 
            
            <View
               android:id="@+id/viewPlanejamento"
               android:layout_width="wrap_content"  
               android:layout_height="wrap_content"             
               android:layout_marginTop="14dp"
               android:layout_weight="1"
               android:background="@drawable/line_separator" />
            
            <TextView
		        android:id="@+id/planejamento"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"		        
		        android:hint="@string/dados_planejamento"		        
		        />
            
            <LinearLayout
                android:id="@+id/linearDiasSemana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

		            <TextView
		                android:id="@+id/domi"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="10dp"
		                android:hint="@string/label_dom" />
                
		            <TextView
		                android:id="@+id/seg"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="10dp"
		                android:hint="@string/label_seg" />

		            <TextView
		                android:id="@+id/ter"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="10dp"
		                android:hint="@string/label_ter" />
		            
		            <TextView
				        android:id="@+id/qua"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"	
				        android:layout_marginLeft="10dp"	        
				        android:hint="@string/label_qua"		        
				        />
		            
		            <TextView
				        android:id="@+id/qui"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"	
				        android:layout_marginLeft="10dp"	        
				        android:hint="@string/label_qui"		        
				        />
		            
		            <TextView
				        android:id="@+id/sex"
				        android:layout_width="wrap_content"
				        android:layout_marginLeft="10dp"
				        android:layout_height="wrap_content"		        
				        android:hint="@string/label_sex"		        
				        />
		            
		            
		            <TextView
				        android:id="@+id/sab"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"	
				        android:layout_marginLeft="10dp"	        
				        android:hint="@string/label_sab"		        
				        />
			</LinearLayout>
            
            <TextView
		        android:id="@+id/labelHorario"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"		        
		        android:hint="@string/label_horario"		        
		        />
            
            <LinearLayout
                android:id="@+id/linearHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
		            
                      <TextView
				        android:id="@+id/labelEntre"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"	
				        android:layout_marginLeft="10dp"	        
				        android:hint="@string/entre_faixa"		        
				        />
                      
                      <TextView
				        android:id="@+id/horaInicial"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"	
				        android:layout_marginLeft="10dp"	        
				        android:hint="00:00"		        
				        />
                      
                      <TextView
				        android:id="@+id/labelE"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"	
				        android:layout_marginLeft="10dp"	        
				        android:hint="@string/e_faixa"		        
				        />
                      
                      <TextView
				        android:id="@+id/horarioFinal"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"	
				        android:layout_marginLeft="10dp"	        
				        android:hint="00:00"		        
				        />
                
           </LinearLayout>
           
             <View
               android:id="@+id/viewPlanejamentoFim"
               android:layout_width="wrap_content"  
               android:layout_height="wrap_content"             
               android:layout_marginTop="14dp"
               android:layout_weight="1"
               android:background="@drawable/line_separator" />
             
           
             
        </LinearLayout>
    </ScrollView>  

    <Button
        android:id="@+id/registrar"
        style="@style/ServiceBox.YellowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_registra"  />

</LinearLayout>