<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <AutoCompleteTextView
        android:id="@+id/partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/partida_label"
        android:completionThreshold="3"
        android:ems="10" />

    <AutoCompleteTextView
        android:id="@+id/destino"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/destino_label"
        android:completionThreshold="3"
        android:ems="10" >

        
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/partida_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/destino_label"
        android:layout_marginTop="38dp"
        android:text="@string/itinerario_partida"
        android:textColor="?android:textColorSecondary" />

    <TextView
        android:id="@+id/destino_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/partida"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="49dp"
        android:text="@string/itinerario_destino"
        android:textColor="?android:textColorSecondary" />

    <Button
        android:id="@+id/confirmar_itinerario"
        style="@style/ServiceBox.YellowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/itinerario_confirmar" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/todos_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirmar_itinerario"
        android:layout_alignLeft="@+id/soAmigosDoAmigos_switch"
        android:layout_marginBottom="31dp"
        android:checked="true"
        android:text="@string/prestar_servico_todos"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/soAmigosDoAmigos_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/todos_switch"
        android:layout_alignLeft="@+id/destino_label"
        android:layout_marginBottom="14dp"
        android:checked="true"
        android:text="@string/prestar_servico_so_amigos_do_amigos"
        android:visibility="visible" />

    <org.holoeverywhere.widget.Switch
        android:id="@+id/soAmigos_switch"
        style="@style/SimNaoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/soAmigosDoAmigos_switch"
        android:layout_alignLeft="@+id/partida_label"
        android:layout_marginBottom="18dp"
        android:checked="true"
        android:text="@string/prestar_servico_so_amigo"
        android:visibility="visible" />

</RelativeLayout>
