<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <org.holoeverywhere.widget.Switch
            android:id="@+id/recomendar_switch"
            style="@style/SimNaoSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:checked="true"
            android:text="@string/lbl_recomendar_sim_nao"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />

    <Button
        android:id="@+id/confirmarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/prestar_servico_confirmar" />

    <TextView
        android:id="@+id/lbl_deixe_comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/recomendar_switch"
        android:text="@string/lbl_deixe_comentario"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_comentario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="5"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="3" />

</RelativeLayout>