<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/servicebox_site_padding"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/login_logo" />
    </FrameLayout>  
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/conta_login_button"
            style="@style/ServiceBox.BeigeWithIconButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="contaLoginButtonAction"
            android:text="@string/conta_login_button" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:src="@drawable/login_icon" />
    </RelativeLayout>
    
    <Button
        android:id="@+id/button_cadastro"
        style="@style/ServiceBox.YellowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cadastroButtonAction"
        android:text="@string/conta_cadastro_button" />
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <Button
        android:id="@+id/button_facebook_login"
        style="@style/com_facebook_loginview_default_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="4dp"        
        android:onClick="contaLoginFacebook"
        android:text="@string/acessa_via_facebook" />
    
   </RelativeLayout>
   
   

</LinearLayout>